<resources>
    <string name="app_name">VendorHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Vishwanath_Lokare">Vishwanath Lokare</string>
    <string name="Cable_Helper">Cable_Helper</string>
    <string name="Pending_Renewal_byDate">Pending Renewal</string>
    <string name="Pending_Fees">Pending Customer</string>
    <string name="Paid_customer">Paid customer</string>
    <string name="New_Customer">New Customer</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="new_customer">New Customer</string>

    <string name="Total_amount">Total Amount</string>
    <string name="Total_customer">Total Customer</string>
    <string name="customer_name"> Customer Name</string>
    <string name="Card_number">Card Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="package_amount">Package Amount</string>
    <string name="Paid">Paid</string>
    <string name="Address"> Package info</string>

    <string name="add">Add</string>
    <string name="Extra">Extra</string>
    <string name="renew_date">Renew Date</string>
    <string name="Renew">Renew Date</string>
    <string name="Call">Call</string>
    <string name="Package">Package</string>
    <string name="History">History</string>
    <string name="Update">Update Customer</string>


    <string name="update1">Update</string>
    <string name="Comlaint_box">Complaint Box</string>
    <string name="RenewalDate">Renewal Date</string>
    <string name="Payment">Payment History</string>
    <string name="history">History</string>
    <string name="Addtopaid">Pay</string>
    <string name="amount">Amount</string>
    <string name="customer">Customer History</string>
    <string name="Line">Line</string>
    <string name="New_paper">New</string>
    <string name="line_name">Line Name</string>
    <string name="worker_assigned">Worker Assigned</string>
    <string name="Papers">Papers</string>
    <string name="paper_name">Paper_name</string>
    <string name="Weekly_prise">Weekly_Prise</string>
    <string name="add_worker">ADD  WORKER</string>
    <string name="presenty">Presenty</string>
    <string name="Date">date</string>
    <string name="submit">Submit</string>
    <string name="Select_all">Select All</string>
    <string name="workers_name">Workers Name</string>
    <string name="line_assigned">Line_Assigned</string>
    <string name="Totalday">Total_Day</string>
    <string name="AmountEarned">Amount_Earned</string>
    <string name="Refresh">Refresh</string>
    <string name="complaint_box">Complaint_Box</string>
    <string name="Download_pdf">Download</string>
    <string name="line">Line</string>
    <string name="Store">Store Name</string>
    <string name="User">User Name</string>
    <string name="Signature">Signature</string>
    <string name="add_line">ADD LINE</string>
    <string name="COUNT">Count</string>
</resources>