<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background">


    <Button
        android:id="@+id/Paidinfo"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_show"
        android:fontFamily="@font/amarante"
        android:freezesText="true"
        android:text="@string/Addtopaid"
        android:textColor="@color/cardview_light_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/amountTaken"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_show"
        android:fontFamily="@font/amarante"
        android:freezesText="true"
        android:text="@string/history"
        android:textColor="@color/cardview_light_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_show"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="TextView"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/text_card"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_show"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="TextView"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_package"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/text_phone" />

    <TextView
        android:id="@+id/text_package"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_show"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/text_card" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_show"
        android:fontFamily="@font/amarante"
        android:freezesText="true"
        android:text="@string/Call"
        android:textColor="@color/cardview_light_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_package" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/card"
        android:fontFamily="@font/amarante"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/line"
        android:textColor="@color/hint"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_phone"
        app:layout_constraintEnd_toStartOf="@+id/text_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_phone" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/card"
        android:fontFamily="@font/amarante"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/Card_number"
        android:textColor="@color/hint"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_card"
        app:layout_constraintEnd_toStartOf="@+id/text_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_card" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/card"
        android:fontFamily="@font/amarante"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/Package"
        android:textColor="@color/hint"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_package"
        app:layout_constraintEnd_toStartOf="@+id/text_package"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_package" />

    <EditText
        android:id="@+id/amountTaken"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/amarante"
        android:hint="@string/amount"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Paidinfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>